2. Design Patterns/2. Behavioral/Strategy/Example/1. Duck Simulator/Bad/DuckSimulator_Bad/Shoveler.cs
namespace DuckSimulator_Bad
{
    public class Shoveler : Duck
    {
        public override void Display()
        {
            System.Console.WriteLine("Jestem kaczka plaskonos");
        }
    }
}